Contrast and symantic error fixes

--- a/web/app/themes/brookhouse/assets/css/custom.css
+++ b/web/app/themes/brookhouse/assets/css/custom.css
@@ -8,7 +8,7 @@
 a,
 a:visited {
     text-decoration: none;
-    color: #62848C;
+    color: #1d70b8;
     transition: all 0.3s ease;
 }
 
